--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@types/multer": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.12.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "express": "^4.17.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.3.9",
     "@typescript-eslint/parser": "^2.29.0",
