--- a/backend/package.json
+++ b/backend/package.json
@@ -5,20 +5,29 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "start": "ts-node src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest"
   },
   "dependencies": {
     "@types/multer": "^1.4.3",
+    "aws-sdk": "^2.725.0",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.1.2",
+    "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
+    "mongodb": "^3.5.9",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "pg": "^8.0.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
@@ -29,8 +38,11 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/ioredis": "^4.17.3",
     "@types/jest": "^26.0.5",
     "@types/jsonwebtoken": "^8.3.9",
+    "@types/mongodb": "^3.5.25",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "eslint": "6.8.0",
