--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -36,6 +36,7 @@
     "no-unused-expressions": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
+    "import/no-duplicates": "off",
     "react/jsx-filename-extension": [
       1,
       {
