--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,14 +18,16 @@
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
     "axios": "^0.19.2",
+    "date-fns": "^2.15.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jsx-a11y": "6.3.0",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4",
     "react": "16.13.1",
-    "react-native": "0.63.0",
+    "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.3",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
